--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cirloc",
-  "version": "0.0.2",
+  "name": "sikky",
+  "version": "0.0.1",
   "description": "TypeScript 2.0 boilerplate",
-  "main": "dist/rollup-starter-project.js",
+  "main": "dist/sikky.js",
   "scripts": {
     "clean:build": "rimraf build/",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,12 +15,15 @@
     "type": "git",
     "url": "git+https://github.com/cirloc/cirloc.git"
   },
-  "author": "",
+  "author": {
+    "name": "KFlash",
+    "email": "kflash123@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cirloc/cirloc/issues"
+    "url": "https://github.com/kflash/sikky/issues"
   },
-  "homepage": "https://github.com/cirloc/cirloc#readme",
+  "homepage": "https://github.com/kflash/sikky#readme",
   "devDependencies": {
     "rollup": "^0.30.0",
     "rollup-plugin-buble": "^0.10.0",
