--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sikky",
-  "version": "0.0.1",
-  "description": "TypeScript 2.0 boilerplate",
+  "version": "0.0.3",
+  "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest. Uses Rollup for bundle, and Buble as the ES2015 compiler",
   "main": "dist/sikky.js",
   "scripts": {
     "clean:build": "rimraf build/",
