--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest. Uses Rollup for bundle, and Buble as the ES2015 compiler",
   "main": "dist/sikky.js",
   "scripts": {
@@ -9,11 +9,12 @@
     "tsc": "./node_modules/.bin/tsc",
     "build": "npm run tsc && npm run build:dev && npm run build:prod",
     "build:dev": "rollup -c rollup.dev.config.ts",
-    "build:prod": "rollup -c rollup.prod.config.ts"
+    "build:prod": "rollup -c rollup.prod.config.ts",
+    "lint": "tslint \"src/**/*.ts?(x)\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cirloc/cirloc.git"
+    "url": "git+https://github.com/sikky/sikky.git"
   },
   "author": {
     "name": "KFlash",
@@ -30,6 +31,7 @@
     "rollup-plugin-uglify": "^0.3.1",
     "rollup-plugin-replace": "^1.1.0",
     "rimraf": "^2.5.2",
-    "typescript": "next"
+    "typescript": "next",
+    "tslint": "next"
   }
 }
