--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest. Uses Rollup for bundle, and Buble as the ES2015 compiler",
   "main": "dist/sikky.js",
   "scripts": {
@@ -16,6 +16,25 @@
     "type": "git",
     "url": "git+https://github.com/kflash/sikky.git"
   },
+  "keywords": [
+    "es6",
+    "es2015",
+    "async",
+    "await",
+    "jsx",
+    "TypeScript",
+    "microsoft",
+    "bundle",
+    "ts",
+    "rollup",
+    "tslint",
+    "boilerplate",
+    "browser"
+  ],
+  "files": [
+    "src",
+    "dist"
+  ],
   "author": {
     "name": "KFlash",
     "email": "kflash123@gmail.com"
@@ -25,11 +44,13 @@
     "url": "https://github.com/kflash/sikky/issues"
   },
   "homepage": "https://github.com/kflash/sikky#readme",
+  "dependencies": {},
   "devDependencies": {
     "rollup": "^0.31.0",
     "rollup-plugin-buble": "^0.10.0",
     "rollup-plugin-uglify": "^0.3.1",
     "rollup-plugin-replace": "^1.1.0",
+    "rollup-plugin-commonjs": "^3.0.0",
     "rimraf": "^2.5.2",
     "typescript": "next",
     "tslint": "next",
