--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sikky",
-  "version": "0.0.14",
+  "version": "0.0.19",
   "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest. Uses Rollup for bundle, and Buble as the ES2015 compiler",
   "main": "dist/sikky.js",
   "scripts": {
-    "test": "",
+    "test": "mocha --require ts-node/register test/**/*.ts",
     "build": "npm run build:ts && npm run build:dev && npm run build:prod",
     "build:ts": "./node_modules/.bin/tsc",
     "build:dev": "rollup -c rollup.dev.config.ts",
@@ -45,12 +45,15 @@
   "homepage": "https://github.com/kflash/sikky#readme",
   "dependencies": {},
   "devDependencies": {
+    "mocha": "^2.5.2",
+    "chai": "^3.5.0",
     "rollup": "^0.31.0",
     "rollup-plugin-buble": "^0.10.0",
     "rollup-plugin-uglify": "^0.3.1",
     "rollup-plugin-replace": "^1.1.0",
     "rollup-plugin-commonjs": "^3.0.0",
     "typescript": "next",
+    "ts-node": "^0.9.0",
     "tslint": "next",
     "codelyzer": "0.0.22"
   }
