--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,42 @@
 language: node_js
-sudo: false
+# in order to use 'trusty' dist, need this.
+# see https://docs.travis-ci.com/user/trusty-ci-environment/
+sudo: required
+# trust dist provides a modern build chain (as opposed to 'precise' dist)
+# which absolves us from having to install compilers and stuff
+dist: trusty
 
 node_js:
   - "stable"
 
+cache:
+  directories:
+    - node_modules
+
+# node 4 likes the G++ v4.8 compiler
+# see https://docs.travis-ci.com/user/languages/javascript-with-nodejs#Node.js-v4-(or-io.js-v3)-compiler-requirements
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - google-chrome
+    packages:
+      - g++-4.8
+      - google-chrome-stable
+
 install:
-  - npm i typescript@next
+  # Check the size of caches
+  - du -sh ./node_modules || true
+  # Install version of npm that we are locked against
+  - npm install -g npm@3
+  # - npm config set registry http://23.251.144.68
+  # Disable the spinner, it looks bad on Travis
+  - npm config set spin false
+  - sudo apt-get update -qq
+  # Log HTTP requests
+  - npm config set loglevel http
+  # Install npm dependencies and ensure that npm cache is not stale
+  - npm install
 
 script:
-  - npm i
   - npm test
