--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "sikky",
-  "version": "0.1.3",
-  "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest. Uses Rollup for bundle, and Buble as the ES2015 compiler",
+  "version": "0.1.5",
+  "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest.",
   "main": "dist/sikky.js",
   "scripts": {
-    "test": "mocha --require ts-node/register test/**/*.ts",
+    "pretest": "tsc test/sikky.specs.ts --outDir build --module system --target es5",
+    "test": "karma start karma.conf.js --no-auto-watch --single-run",
+    "watch": "karma start karma.conf.js --auto-watch",
     "build": "npm run build:ts && npm run build:dev && npm run build:prod",
-    "build:ts": "./node_modules/.bin/tsc",
+    "build:ts": "tsc src/sikky.ts --outDir dist --target es6",
     "build:dev": "rollup -c rollup.dev.config.ts",
     "build:prod": "rollup -c rollup.prod.config.ts",
     "lint": "tslint \"src/**/*.ts?(x)\""
@@ -23,6 +25,8 @@
     "jsx",
     "TypeScript",
     "microsoft",
+    "karma",
+    "tslint",
     "bundle",
     "ts",
     "rollup",
@@ -42,16 +46,19 @@
   "homepage": "https://github.com/kflash/sikky",
   "dependencies": {},
   "devDependencies": {
-    "mocha": "^2.5.2",
     "chai": "^3.5.0",
+    "codelyzer": "0.0.22",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-mocha": "^1.0.1",
+    "karma-chai": "^0.1.0",
+    "mocha": "^2.5.2",
     "rollup": "^0.31.0",
     "rollup-plugin-buble": "^0.10.0",
-    "rollup-plugin-uglify": "^0.3.1",
-    "rollup-plugin-replace": "^1.1.0",
     "rollup-plugin-commonjs": "^3.0.0",
-    "typescript": "next",
-    "ts-node": "^0.9.0",
+    "rollup-plugin-replace": "^1.1.0",
+    "rollup-plugin-uglify": "^0.3.1",
     "tslint": "next",
-    "codelyzer": "0.0.22"
+    "typescript": "^1.9.0-dev.20160611-1.0"
   }
 }
