added tsconfig.json options for async/await support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "removeComments": false,
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "suppressImplicitAnyIndexErrors": false,
+    "inlineSources": true,
+    "inlineSourceMap": true,
     "noEmitHelpers": true
   },
   "compileOnSave": false,
