--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ addons:
     packages:
       - g++-4.8
       - google-chrome-stable
-      
+
 matrix:
   include:
     - node_js: 'stable'
@@ -40,6 +40,8 @@ install:
   - du -sh ./node_modules || true
   # Install version of npm that we are locked against
   - npm install -g npm@3
+  # Install latest typings version
+  - npm install -g typings
   # - npm config set registry http://23.251.144.68
   # Disable the spinner, it looks bad on Travis
   - npm config set spin false
