--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rollup-plugin-replace": "^1.1.0",
     "rollup-plugin-uglify": "^0.3.1",
     "tslint": "next",
-    "typescript": "^1.9.0-dev.20160611-1.0"
+    "typescript": "^1.9.0-dev.20160611-1.0",
+    "typings": "^1.0.5"
   }
 }
