--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/sikky.js",
   "scripts": {
     "postinstall": "typings install",
+    "pretest": "tsc test/sikky.specs.ts --outDir build --module system --target es5",
     "test": "cross-env NODE_ENV=test && karma start karma.conf.js --no-auto-watch --single-run",
     "watch": "cross-env NODE_ENV=test && karma start karma.conf.js --auto-watch",
     "build": "npm run build:ts && npm run build:dev && npm run build:prod",
