--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/sikky.js",
   "scripts": {
     "postinstall": "typings install",
-    "pretest": "tsc test/sikky.specs.ts --outDir build --module system --target es5",
+    "pretest": "tsc test/sikky.specs.ts typings/tsd.d.ts --outDir build --module system --target es5",
     "test": "cross-env NODE_ENV=test && karma start karma.conf.js --no-auto-watch --single-run",
     "watch": "cross-env NODE_ENV=test && karma start karma.conf.js --auto-watch",
     "build": "npm run build:ts && npm run build:dev && npm run build:prod",
@@ -61,6 +61,7 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.3",
     "mocha": "^2.5.2",
     "rollup": "^0.31.1",
     "rollup-plugin-buble": "^0.10.0",
@@ -69,6 +70,7 @@
     "rollup-plugin-uglify": "^0.3.1",
     "tslint": "next",
     "typescript": "^1.9.0-dev.20160611-1.0",
-    "typings": "^1.0.5"
+    "typings": "^1.0.5",
+    "ts-node": "0.9.0"
   }
 }
