--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ install:
   # Install version of npm that we are locked against
   - npm install -g npm@3
   # Install latest typings version
-  - npm install -g typings
+ # - npm install -g typings
   # - npm config set registry http://23.251.144.68
   # Disable the spinner, it looks bad on Travis
   - npm config set spin false
