improved Karma settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,16 @@
-# Mac artifacts
+build
 .DS_Store
 ehthumbs.db
 Icon?
 Thumbs.db
-
-# Editor artifacts
+.idea
+.vscode
+.npm-debug
 .idea/
 .*.swp
 .*.un~
 *.iml
 .tmp
 
-# Users Environment Variables
-.lock-wscript
-
-# Node Files
 node_modules
-bower_components
-
-# NPM artifacts
-npm-*
-
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Typing TSD
-typings/tsd/**
-
-# Coverage directory used by tools like istanbul
-coverage
-
-# Generated files
-coverage
-tmp
-
-
-# Misc files
-*.log
-build
+typings
