--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "sikky",
-  "version": "0.1.21",
+  "version": "0.1.23",
   "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest.",
   "main": "dist/sikky.js",
+  "readmeFilename": "README.md",
   "scripts": {
+    "clean:build": "rm -rf build/",
     "pretest": "tsc test/sikky.specs.ts typings/tsd.d.ts --outDir build --module system --target es5",
-    "test": "cross-env NODE_ENV=test && karma start karma.conf.js --no-auto-watch --single-run",
-    "watch": "cross-env NODE_ENV=test && karma start karma.conf.js --auto-watch",
+    "test": "cross-env NODE_ENV=test && karma start karma.conf.ts --no-auto-watch --single-run",
+    "watch": "cross-env NODE_ENV=test && karma start karma.conf.ts --auto-watch",
     "build": "npm run build:ts && npm run build:dev && npm run build:prod",
     "build:ts": "cross-env NODE_ENV=development && tsc src/sikky.ts --outDir dist --target es6",
     "build:dev": "cross-env NODE_ENV=development && rollup -c rollup.dev.config.ts",
     "build:prod": "cross-env NODE_ENV=production && rollup -c rollup.prod.config.ts",
     "lint": "npm run lint:src && npm run lint:tests",
-    "lint:src": "tslint 'src/**/*.{ts,tsx}'",
-    "lint:tests": "tslint 'test/**/*.{ts,tsx}'"
+    "lint:src": "tslint src/**/*.ts src/**/*.tsx",
+    "lint:tests": "tslint test/**/*.ts test/**/*.tsx"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
   "keywords": [
     "es6",
     "es2015",
+    "async/await",
     "async",
     "await",
     "jsx",
