--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.3",
     "mocha": "^2.5.2",
