--- a/package.json
+++ b/package.json
@@ -76,6 +76,6 @@
     "rollup-plugin-replace": "^1.1.0",
     "rollup-plugin-uglify": "^0.3.1",
     "tslint": "next",
-    "typescript": "^1.9.0-dev.20160611-1.0"
+    "typescript": "next"
   }
 }
