--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "clean:build": "rm -rf build/",
     "pretest": "rollup -c rollup.test.config.js",
     "test": "cross-env NODE_ENV=test karma start karma.conf.js --no-auto-watch --single-run",
-    "watch": "cross-env NODE_ENV=test karma start karma.conf.js --auto-watch",
+    "tdd": "cross-env NODE_ENV=test karma start karma.conf.js --auto-watch",
     "prebuild": "tsc src/sikky.ts --outDir build --target es6",
     "build": "npm run build:dev && npm run build:prod",
     "build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js",
     "build:prod": "cross-env NODE_ENV=production rollup -c rollup.config.js",
+    "watch": "tsc src/cirloc.ts --outDir build --target es6 --w",
     "lint": "tslint -c tslint.json src/**/*.ts src/**/*.ts tests/**/*.ts tests/**/*.tsx"
   },
   "repository": {
