--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowJs": false,
+    "allowUnreachableCode": false,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "newLine": "LF",
