--- a/circle.yml
+++ b/circle.yml
@@ -8,9 +8,17 @@ machine:
 
 dependencies:
    pre:
+     - npm set progress=false
+     - sudo apt-get update && sudo apt-get install --only-upgrade google-chrome-stable
      - npm install -g npm
    override:
       - npm install
 test:
   override:
-    - npm test
+   - nvm use 4 && npm test
+   - nvm use 5 && npm test
+   - nvm use 'stable' && npm test
+
+general:
+  artifacts:
+    - reports
