force linting of source files when running the build task

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.2.6",
+  "version": "0.2.8",
   "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest.",
   "main": "dist/sikky.js",
   "readmeFilename": "README.md",
@@ -10,11 +10,12 @@
     "test": "cross-env NODE_ENV=test karma start karma.conf.js --no-auto-watch --single-run",
     "tdd": "cross-env NODE_ENV=test karma start karma.conf.js --auto-watch",
     "prebuild": "tsc src/sikky.ts --outDir build --target es6",
-    "build": "npm run build:dev && npm run build:prod",
+    "build": "npm run lint:src && npm run build:dev && npm run build:prod",
     "build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js",
     "build:prod": "cross-env NODE_ENV=production rollup -c rollup.config.js",
     "watch": "tsc src/cirloc.ts --outDir build --target es6 --w",
-    "lint": "tslint -c tslint.json src/**/*.ts src/**/*.ts tests/**/*.ts tests/**/*.tsx"
+    "lint:src": "tslint -c tslint.json src/**/*.ts src/**/*.tsx",
+    "lint:tests": "tslint -c tslint.json tests/**/*.ts tests/**/*.tsx"
   },
   "repository": {
     "type": "git",
