--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "sikky",
-  "version": "0.2.8",
+  "version": "0.3.0",
   "description": "TypeScript 2.0 Pre boilerplate that aims to be the fastest and smallest.",
   "main": "dist/sikky.js",
   "readmeFilename": "README.md",
   "scripts": {
-    "clean:build": "rm -rf build/",
-    "pretest": "rollup -c rollup.test.config.js",
-    "test": "cross-env NODE_ENV=test karma start karma.conf.js --no-auto-watch --single-run",
-    "tdd": "cross-env NODE_ENV=test karma start karma.conf.js --auto-watch",
     "prebuild": "tsc src/sikky.ts --outDir build --target es6",
     "build": "npm run lint:src && npm run build:dev && npm run build:prod",
     "build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js",
     "build:prod": "cross-env NODE_ENV=production rollup -c rollup.config.js",
-    "watch": "tsc src/cirloc.ts --outDir build --target es6 --w",
+    "clean:build": "rm -rf build/",
     "lint:src": "tslint -c tslint.json src/**/*.ts src/**/*.tsx",
-    "lint:tests": "tslint -c tslint.json tests/**/*.ts tests/**/*.tsx"
+    "lint:tests": "tslint -c tslint.json tests/**/*.ts tests/**/*.tsx",
+    "pretest": "rollup -c rollup.test.config.js",
+    "test": "cross-env NODE_ENV=test karma start karma.conf.js --no-auto-watch --single-run",
+    "tdd": "cross-env NODE_ENV=test karma start karma.conf.js --auto-watch",
+    "watch": "tsc src/cirloc.ts --outDir build --target es6 --w"
   },
   "repository": {
     "type": "git",
@@ -24,23 +24,19 @@
   "keywords": [
     "es6",
     "es2015",
-    "async/await",
     "async",
     "await",
     "jsx",
     "TypeScript",
     "microsoft",
-    "karma",
     "tslint",
     "rollup",
-    "modules",
-    "bundling",
-    "bundle",
-    "ts",
+    "universal",
     "rollup",
     "tslint",
-    "boilerplate",
-    "browser"
+    "mocha",
+    "chai",
+    "boilerplate"
   ],
   "files": [
     "src",
