--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ sudo: required
 dist: trusty
 node_js:
   - "stable"
-  - "5"
   - "6"
+  - "5"
+  - "4"
+matrix:
+  fast_finish: true
+  allow_failures:
+    - node_js: '4'
 
 addons:
 #  firefox: "38.0"
@@ -23,6 +28,11 @@ addons:
 cache:
   directories:
     - node_modules
+
+deploy:
+  on: tags: true
+  provider: npm
+  email: ""
 
 before_install:
   - ./scripts/ci/before.sh
