--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "A very fast, and small sized TypeScript 2.0 Pre boilerplate. Tests in Mocha & Chai. TSLint for better code quality",
   "main": "dist/sikky.js",
   "author": "KFlash",
@@ -55,10 +55,12 @@
   "devDependencies": {
     "@types/mocha": "^2.2.21-alpha",
     "@types/chai": "^3.4.22-alpha",
+    "@types/sinon-chai": "^2.7.20-alpha",
     "chai": "^3.5.0",
     "cross-env": "^1.0.8",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
+    "karma-sinon-chai": "^1.2.0",
     "karma-coveralls": "^1.1.2",
     "karma-coverage": "^1.0.0",
     "karma-chrome-launcher": "^1.0.1",
@@ -76,6 +78,8 @@
     "rollup-plugin-istanbul": "^1.0.0",
     "rollup-plugin-node-resolve": "^1.7.0",
     "rollup-plugin-typescript": "^0.7.5",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
     "tslint": "3.11.0",
     "typescript": "1.9.0-dev.20160613-1.0"
   }
