--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.4.4",
   "description": "A very fast, and small sized TypeScript 2.0 Pre boilerplate. Tests in Mocha & Chai. TSLint for better code quality",
   "main": "dist/sikky.js",
+  "jsnext:main": "dist/sikky.mjs",
   "author": "KFlash",
   "homepage": "https://github.com/kflash/sikky",
   "license": "MIT",
