--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sikky",
-  "version": "0.4.4",
+  "version": "0.4.6",
   "description": "A very fast, and small sized TypeScript 2.0 Pre boilerplate. Tests in Mocha & Chai. TSLint for better code quality",
   "main": "dist/sikky.js",
   "jsnext:main": "dist/sikky.mjs",
@@ -23,6 +23,11 @@
     "async",
     "await",
     "jsx",
+    "tsx",
+    "jsnext",
+    "ecmascript",
+    "npm",
+    "react",
     "TypeScript",
     "microsoft",
     "tslint",
@@ -69,6 +74,7 @@
     "karma-rollup-preprocessor": "^2.0.2",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.3",
+    "lolex": "^1.5.0",
     "mocha": "^2.5.2",
     "rollup": "^0.31.2",
     "rollup-plugin-buble": "^0.10.0",
