--- a/package.json
+++ b/package.json
@@ -90,6 +90,6 @@
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "tslint": "3.11.0",
-    "typescript": "1.9.0-dev.20160613-1.0"
+    "typescript": "next"
   }
 }
