--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "rollup-plugin-typescript": "^0.7.5",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
-    "tslint": "3.11.0",
+    "tslint": "next",
     "typescript": "1.9.0-dev.20160614-1.0"
   }
 }
