--- a/package.json
+++ b/package.json
@@ -89,6 +89,6 @@
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "tslint": "next",
-    "typescript": "next"
+    "typescript": "1.9.0-dev.20160614-1.0"
   }
 }
