--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "tslint": "next",
-    "typescript": "next"
+    "typescript": "next",
+    "typings": "^1.1.0"
   }
 }
